--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 </head>
 
 <body>
+    <div class="header">
+        <div class="headerlogo">Header Logo</div>
+        <a href="#">header link one</a>
+        <a href="#">header link two</a>
+        <a href="#">header link three</a>
+    
+        <h1 class="website">This website is awesome</h1>
+        <p class="subtext">This wesbsite has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+        <button class="button">Sign Up</button>
+    </div>
     
 </body>
 </html>
