Div class .header changed to .container

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="header">
+    <div class="container">
         <div class="headerlogo">Header Logo</div>
         <a href="#">header link one</a>
         <a href="#">header link two</a>
@@ -20,6 +20,8 @@
         <button class="button">Sign Up</button>
         <img src="/images/tumblr_57c5d29121ac36adf5af60dfb91cb428_a0079e02_500.webp" alt="Gen Asagiri from Dr. STONE">
     </div>
+
+
     
 </body>
 </html>
