New div added for the second section of the webpage

--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
         <img src="/images/tumblr_57c5d29121ac36adf5af60dfb91cb428_a0079e02_500.webp" alt="Gen Asagiri from Dr. STONE">
     </div>
 
+    <div class="container-two">
+        <h2 class="random">Some random information.</h2>
+        <div class="image"></div>
+        <p class="subtext">this is some subtext under an illustration or image</p>
+        <div class="image"></div>
+        <p class="subtext">this is some subtext under an illustration or image</p>
+        <div class="image"></div>
+        <p class="subtext">this is some subtext under an illustration or image</p>
+        <div class="image"></div>
 
+    </div>
     
 </body>
 </html>
