--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
         <div class="image"></div>
         <p class="subtext">this is some subtext under an illustration or image</p>
         <div class="image"></div>
+    </div>
 
+    <div class="container-three">
+        <p class="quote"><i>This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</i></p>
+        <strong class="author">-Thor, God of Thunder</strong>
     </div>
     
 </body>
