--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
             <button>Sign Up</button>
         </div>
     </div>
+
+    <div class="footer">Copyright © The Odin Project 2022</div>
     
 </body>
 </html>
