Links turned into unordered lists, flexbox added to header and list in order to move links to the right, styles added to lists

--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
 
 <body>
     <div class="container">
-        <div class="headerlogo">Header Logo</div>
-        <a href="#">header link one</a>
-        <a href="#">header link two</a>
-        <a href="#">header link three</a>
-    
+        <div class="header">
+            <div class="headerlogo">Header Logo</div>
+            <ul>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+            
+        </div>
         <h1 class="website">This website is awesome</h1>
         <p class="subtext">This wesbsite has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
         <button class="button">Sign Up</button>
-        <img src="/images/tumblr_57c5d29121ac36adf5af60dfb91cb428_a0079e02_500.webp" alt="Gen Asagiri from Dr. STONE">
+        <img src="images/tumblr_57c5d29121ac36adf5af60dfb91cb428_a0079e02_500.webp" alt="Gen Asagiri from Dr. STONE">
     </div>
 
     <div class="container-two">
