Styles added to .website, Lower part of header rearranged in order to have image on the side, styles added to button.

--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
             </ul>
             
         </div>
-        <h1 class="website">This website is awesome</h1>
-        <p class="subtext">This wesbsite has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-        <button class="button">Sign Up</button>
-        <img src="images/tumblr_57c5d29121ac36adf5af60dfb91cb428_a0079e02_500.webp" alt="Gen Asagiri from Dr. STONE">
+        <div class="lower">
+            <div class="lower2">
+                <h1 class="website">This website is awesome</h1>
+                <p class="subtext">This wesbsite has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                <button class="button">Sign Up</button>
+            </div>     
+            <img src="images/tumblr_57c5d29121ac36adf5af60dfb91cb428_a0079e02_500.webp" alt="Gen Asagiri from Dr. STONE">
+        </div> 
     </div>
 
     <div class="container-two">
