Image of Gen Asagiri replaced with gray box, dimension added and centered to the screen

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p class="subtext">This wesbsite has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
                 <button class="button">Sign Up</button>
             </div>     
-            <img src="images/tumblr_57c5d29121ac36adf5af60dfb91cb428_a0079e02_500.webp" alt="Gen Asagiri from Dr. STONE">
+            <div class="placeholder"></div>
         </div> 
     </div>
 
