Subtext classes inside container two changed in order to be seperated from subtext from container one

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <div class="container-two">
         <h2 class="random">Some random information.</h2>
         <div class="image"></div>
-        <p class="subtext">this is some subtext under an illustration or image</p>
+        <p class="sub">this is some subtext under an illustration or image</p>
         <div class="image"></div>
-        <p class="subtext">this is some subtext under an illustration or image</p>
+        <p class="sub">this is some subtext under an illustration or image</p>
         <div class="image"></div>
-        <p class="subtext">this is some subtext under an illustration or image</p>
+        <p class="sub">this is some subtext under an illustration or image</p>
         <div class="image"></div>
     </div>
 
