Placeholder changed from div to img, placeholder replaced with gif of Senku from Dr. STONE

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p class="subtext">This wesbsite has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
                 <button class="button">Sign Up</button>
             </div>     
-            <div class="placeholder"></div>
+            <img class="placeholder" src="images/fc56fbebf07e7152ce5d3151ae10294000561119r1-888-497_hq.gif"></div>
         </div> 
     </div>
 
