--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <div class="image"></div>
         <p class="sub">this is some subtext under an illustration or image</p>
         <div class="image"></div>
+        <p class="sub">this is some subtext under an illustration or image</p>    
     </div>
 
     <div class="container-three">
