Header moved out of container div, flexbox added to empty images and text

--- a/index.html
+++ b/index.html
@@ -28,17 +28,24 @@
             <img class="placeholder" src="images/fc56fbebf07e7152ce5d3151ae10294000561119r1-888-497_hq.gif"></div>
         </div> 
     </div>
-
+    <h2 class="random">Some random information.</h2>
     <div class="container-two">
-        <h2 class="random">Some random information.</h2>
-        <div class="image"></div>
-        <p class="sub">this is some subtext under an illustration or image</p>
-        <div class="image"></div>
-        <p class="sub">this is some subtext under an illustration or image</p>
-        <div class="image"></div>
-        <p class="sub">this is some subtext under an illustration or image</p>
-        <div class="image"></div>
-        <p class="sub">this is some subtext under an illustration or image</p>    
+        <div class="info">
+            <div class="image"></div>
+            <p class="sub">this is some subtext under an illustration or image</p>
+        </div>
+        <div class="info">
+            <div class="image"></div>
+            <p class="sub">this is some subtext under an illustration or image</p>
+        </div>
+        <div class="info">
+            <div class="image"></div>
+            <p class="sub">this is some subtext under an illustration or image</p>
+        </div>
+        <div class="info">
+            <div class="image"></div>
+            <p class="sub">this is some subtext under an illustration or image</p>
+        </div>   
     </div>
 
     <div class="container-three">
