Class .button switched to second button, White border added in second button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="lower2">
                 <h1 class="website">This website is awesome</h1>
                 <p class="subtext">This wesbsite has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-                <button class="button">Sign Up</button>
+                <button>Sign Up</button>
             </div>     
             <img class="placeholder" src="images/fc56fbebf07e7152ce5d3151ae10294000561119r1-888-497_hq.gif"></div>
         </div> 
@@ -56,9 +56,11 @@
 
     <div class="container-four">
         <div class="background">
-            <h3 class="call2action">Call to action! It's time!</h3>
-            <p class="underheader">Sign up for our product by clicking our button right over there!</p>
-            <button>Sign Up</button>
+            <div class="text-box">
+                <h3 class="call2action">Call to action! It's time!</h3>
+                <p class="underheader">Sign up for our product by clicking our button right over there!</p>
+            </div> 
+            <button class="button">Sign Up</button>
         </div>
     </div>
 
