class for textbox changed, flexbox created for button to be next to subtext

--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
         <div class="background">
             <div class="text-box">
                 <h3 class="call2action">Call to action! It's time!</h3>
-                <p class="underheader">Sign up for our product by clicking our button right over there!</p>
             </div> 
-            <button class="button">Sign Up</button>
+            <div class="textbox">
+                <p class="underheader">Sign up for our product by clicking our button right over there!</p>
+                <button class="button">Sign Up</button
+            </div>
         </div>
     </div>
 
