Indentation and issues with button value resolved, Footer given color and centered

--- a/index.html
+++ b/index.html
@@ -61,12 +61,15 @@
             </div> 
             <div class="textbox">
                 <p class="underheader">Sign up for our product by clicking our button right over there!</p>
-                <button class="button">Sign Up</button
+                <button class="button">Sign Up</button>
             </div>
         </div>
     </div>
 
-    <div class="footer">Copyright © The Odin Project 2022</div>
-    
+    <div class="container-five">
+        <div class="footer">
+            <p>Copyright © The Odin Project 2022</p>
+        </div>
+    </div>
 </body>
 </html>
